<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".section.step.StepListFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_steps"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/holder_step" />

</FrameLayout>