<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".section.step.StepDetailFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="60">

        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/video"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <RelativeLayout
            android:id="@+id/retry_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorRetryPlayerBackground">

            <ImageView
                android:id="@+id/retry_icon"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_centerInParent="true"
                android:scaleType="centerInside"
                android:src="@drawable/ic_refresh_white"
                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/loader"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_centerInParent="true" />

        </RelativeLayout>

    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40">

        <TextView
            android:id="@+id/step_detail"
            style="@style/StepDetailStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/step" />
    </FrameLayout>

</LinearLayout>
